Implementação Vendas e Fornecedores

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,1 @@
-<!-- <router-outlet></router-outlet>
-<p-confirmPopup></p-confirmPopup>
-<p-toast></p-toast> -->
-<app-produto></app-produto>
+<router-outlet></router-outlet>
