--- a/frontend/src/app/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <div class="navbar">
     <ul>
-        <li><a style="color: white;" href="http://localhost:4200/">HOME</a></li>
+        <li><a style="color: black;" href="http://localhost:4200/">HOME</a></li>
     </ul>
 </div>
