Implementação menu de navegação

--- a/frontend/src/app/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/nav-bar/nav-bar.component.html
@@ -1,5 +1,10 @@
 <div class="navbar">
     <ul>
-        <li><a style="color: black;" href="http://localhost:4200/">HOME</a></li>
+        <li><a style="color: black;" href="http://localhost:4200/produtos">| PRODUTOS |</a></li>
+        <li><a style="color: black;" href="http://localhost:4200/vendas">VENDAS |</a></li>
+        <li><a style="color: black;" href="http://localhost:4200/fornecedores">FORNECEDORES |</a></li>
+        <li><a style="color: black;" href="http://localhost:4200/clientes">CLIENTES |</a></li>
+        <li><a style="color: black;" href="http://localhost:4200/funcionarios">FUNCIONARIOS |</a></li>
+        <li><a style="color: black;" href="http://localhost:4200/parceiros">PARCEIROS |</a></li>
     </ul>
 </div>
