--- a/frontend/src/app/cliente/cliente.component.html
+++ b/frontend/src/app/cliente/cliente.component.html
@@ -1,1 +1,97 @@
-<p>cliente works!</p>
+
+<p-toast></p-toast>
+
+<div class="p-grid p-jc-center p-shadow-5">
+    <div class="p-col-9">
+            <div class="card">
+                <p-toolbar styleClass="p-mb-4">
+                    <ng-template pTemplate="left">
+                        <button pButton pRipple label="Novo" icon="pi pi-plus" class="p-button-success p-mr-2"
+                            (click)="criarCliente()"></button>
+                    </ng-template>
+                </p-toolbar>
+
+                <p-table #dt [value]="clientes" [rows]="4" [paginator]="true"
+                    [globalFilterFields]="['nome','tipo','beneficios']" [rowHover]="true"
+                    dataKey="_id" currentPageReportTemplate="Mostrando {first} de {last} no total de {totalRecords}"
+                    [showCurrentPageReport]="true">
+                    <ng-template pTemplate="caption">
+                        <div class="p-d-flex p-ai-center p-jc-between">
+                            <h5 class="p-m-0">Quadro de clientes</h5>
+                            <span class="p-input-icon-left">
+                                <i class="pi pi-search"></i>
+                                <input pInputText type="text" (input)="dt.filterGlobal($event.target.value, 'contains')"
+                                    placeholder="Pesquisar..." />
+                            </span>
+                        </div>
+                    </ng-template>
+                    <ng-template pTemplate="header">
+                        <tr>
+                            <th pSortableColumn="Nome">Nome<p-sortIcon field="nome"></p-sortIcon>
+                            </th>
+                            <th pSortableColumn="Tipo">Tipo<p-sortIcon field="tipo"></p-sortIcon>
+                            </th>
+                            <th pSortableColumn="Beneficios">Benefiocios<p-sortIcon field="beneficios"></p-sortIcon>
+                            </th>
+                            <th></th>
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="body" let-cliente>
+                        <tr>
+                            <td>{{cliente.nome}}</td>
+                            <td>{{cliente.tipo}}</td>
+                            <td>{{cliente.beneficios}}</td>
+                            <td>
+                                <button pButton pRipple icon="pi pi-pencil"
+                                    class="p-button-rounded p-button-success p-mr-2"
+                                    (click)="editCliente(cliente)"></button>
+                                <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning"
+                                    (click)="deleteCliente(cliente)"></button>
+                            </td>
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="summary">
+                        <div class="p-d-flex p-ai-center p-jc-between">
+                            No total, existem {{clientes ? clientes.length : 0 }} Clientes.
+                        </div>
+                    </ng-template>
+                </p-table>
+            </div>
+
+            <p-dialog [(visible)]="clienteDialogo" [style]="{width: '450px'}" header="Informacões do cliente" [modal]="true"
+                styleClass="p-fluid" [closable]="false">
+                <ng-template pTemplate="content">
+                    <div class="p-field">
+                        <label for="nome">Nome</label>
+                        <span _ngcontent-emx-c135="" class="p-input-icon-right">
+                            <i _ngcontent-emx-c135="" class="pi pi-check"></i>
+                            <input type="text" pInputText id="nome" [(ngModel)]="cliente.nome" required autofocus />
+                        </span>
+                        <small class="p-error" *ngIf="submetido && cliente.nome === ''">Nome é requirido.</small>
+                    </div>
+                    <div class="p-field">
+                        <label for="tipo">Tipo</label>
+                        <p-dropdown appendTo="body" [(ngModel)]="cliente.tipo" inputId="tipo" [options]="tipo"
+                            required placeholder="Selecione">
+                        </p-dropdown>
+                    </div>
+                    <div class="p-field">
+                        <label for="beneficios">Beneficios</label>
+                        <span _ngcontent-emx-c135="" class="p-input-icon-right">
+                            <i _ngcontent-emx-c135="" class="pi pi-check"></i>
+                            <input type="text" pInputText id="beneficios" [(ngModel)]="cliente.beneficios" required autofocus />
+                        </span>
+                    </div>
+                </ng-template>
+
+                <ng-template pTemplate="footer">
+                    <button pButton pRipple label="Cancelar" icon="pi pi-times" class="p-button-text"
+                        (click)="hideDialog()"></button>
+                    <button pButton pRipple label="Salvar" icon="pi pi-check" class="p-button-text"
+                        (click)="saveCliente()"></button>
+                </ng-template>
+            </p-dialog>
+
+            <p-confirmDialog [style]="{width: '450px'}"></p-confirmDialog>
+        </div>
+    </div>
